# OMPM

./: .pylintrc  README.md  manage.py  pyproject.toml
djng/: asgi.py  settings.py  urls.py  wsgi.py
ntrfc/: apps.py  models.py  urls.py  views.py
ntrfc/migrations/: 0001_initial.py
ntrfc/templates/ntrfc/: city.html  index.html
ompm/: requests.py
