[tool.poetry]
name = "ompm"
version = "0.1.0"
description = ""
authors = ["EK <krakhalev.efim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openmeteo-requests = "^1.3.0"
requests-cache = "^1.2.1"
pandas = "^2.2.3"
pytest = "^8.3.3"
django = "^5.1.3"
pylint = "^3.3.1"
seaborn = "^0.13.2"
django-bootstrap5 = "^24.3"
osmpythontools = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
